--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             };
 
             try {
-                const response = await fetch('YOUR_GOOGLE_APPS_SCRIPT_URL', {
+                const response = await fetch('https://script.google.com/macros/s/AKfycbwDemIpraMFxHBZx_OtzfJqPGbBoXlTCqfxW1P0y2XSh3JLoqd4xjnyOVPY8fqOTOW8/exec', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
