--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 return;
             }
 
-            const scriptURL = 'YOUR_GOOGLE_SCRIPT_URL_HERE';
+            const scriptURL = 'https://script.google.com/macros/s/AKfycbyfLGRI3-81ZOJLCxoU1ACUY6OX4IW8nSEH-Vznd6uVTpBRbWwN3crwRdeLKe4sj1Yl/exec';
             const data = {
                 item: item,
                 serial: serial,
