--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 40%;
+            height: 100%;
             background: rgba(0,0,0,0.8);
             z-index: 1000;
             display: none;
         }
         #scanner {
             width: 100%;
-            height: 40vh;
+            height: 30vh;
             margin: 20px auto;
         }
         #scanner video {
             width: 100%;
-            height: 80%;
+            height: auto;
         }
     </style>
 </head>
