--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     <h2 class="mb-4">Barcode Scanner</h2>
     
     <!-- Scan Buttons -->
-    <button class="btn btn-primary mb-2" onclick="startScanner('item')">Scan Item Barcode</button>
+    <button class="btn btn-primary mb-4" onclick="startScanner('item')">Scan Item Barcode</button>
     <button class="btn btn-primary mb-4" onclick="startScanner('serial')">Scan Serial Barcode</button>
 
     <!-- Input Fields -->
-    <div class="mb-3">
+    <div class="mb-4">
         <input type="text" id="item" class="form-control mb-2" placeholder="Item Barcode">
-        <input type="text" id="serial" class="form-control" placeholder="Serial Barcode">
+        <input type="text" id="serial" class="form-control mb-2" placeholder="Serial Barcode">
     </div>
 
     <!-- Manual Entry Toggle -->
@@ -49,8 +49,8 @@
 
     <!-- Scanner Preview -->
     <div id="scanner-container" style="display: none;">
-        <div id="scanner" style="width: 100%; height: 300px;"></div>
-        <button class="btn btn-danger mt-2" onclick="stopScanner()">Stop Scanner</button>
+        <div id="scanner" style="width: 100%; height: 1px;"></div>
+        <button class="btn btn-danger mt-3" onclick="stopScanner()">Stop Scanner</button>
     </div>
 
     <script>
