--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 return;
             }
 
-            const scriptURL = 'YOUR_GOOGLE_SCRIPT_URL_HERE';
+            const scriptURL = 'https://script.google.com/macros/s/AKfycbyhMRU0DcDquqbamt5vSRBheJDIzEFcGnwgVZJ7H7fH4DbjJgFllr59xXjAWVElzpqKPg/exec';
             
             try {
                 await fetch(scriptURL, {
