--- a/index.html
+++ b/index.html
@@ -3,133 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobile Barcode Scanner</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.scanapp.org/v3/scanapp.min.js"></script>
+    <title>Barcode Scanner</title>
+    <script src="https://unpkg.com/html5-qrcode@2.3.8/html5-qrcode.min.js"></script>
+    <style>
+        body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
+        #reader { width: 300px; margin: auto; }
+        input { width: 90%; padding: 8px; margin: 10px; }
+        button { padding: 10px 15px; margin: 10px; cursor: pointer; }
+    </style>
 </head>
-<body class="container mt-4">
-    <h2 class="mb-4">Barcode Scanner</h2>
+<body>
 
-    <!-- Scan Buttons -->
-    <div class="btn-group mb-3">
-        <button class="btn btn-primary" onclick="startScanner('item')">Scan Item Barcode</button>
-        <button class="btn btn-primary" onclick="startScanner('serial')">Scan Serial Barcode</button>
-    </div>
+    <h2>Scan Item & Serial Barcodes</h2>
+
+    <!-- Barcode Scanner -->
+    <div id="reader"></div>
 
     <!-- Input Fields -->
-    <div class="mb-3">
-        <input type="text" id="item" class="form-control mb-2" placeholder="Item Barcode" required>
-        <input type="text" id="serial" class="form-control" placeholder="Serial Barcode" required>
-    </div>
+    <input type="text" id="itemBarcode" placeholder="Item Barcode">
+    <input type="text" id="serialBarcode" placeholder="Serial Barcode">
 
-    <!-- Controls -->
-    <div class="btn-group mb-4">
-        <button id="manualToggle" class="btn btn-secondary" onclick="toggleManualEntry()">Enable Manual Entry</button>
-        <button class="btn btn-success" onclick="saveToGoogleSheets()">Save Record</button>
-    </div>
-
-    <!-- Scanner Preview -->
-    <div id="scanner-container" class="d-none">
-        <video id="scanner-video" style="width: 100%; height: 300px;"></video>
-        <button class="btn btn-danger mt-2" onclick="stopScanner()">Stop Scanner</button>
-    </div>
-
-    <!-- Status Alert -->
-    <div id="alert" class="alert d-none" role="alert"></div>
+    <!-- Control Buttons -->
+    <button onclick="startScanner()">Start Scanning</button>
+    <button onclick="stopScanner()">Stop Scanner</button>
+    <button onclick="saveToGoogleSheets()">Save Record</button>
 
     <script>
-        let scanner = null;
-        let currentScannerType = '';
-        let manualEntryEnabled = false;
+        let scanner;
+        let scanningItem = true; // Track which barcode is being scanned
 
-        const scanAppConfig = {
-            apiKey: 'KF_API_815b9287-ebb8-4780-90d0-fc76ad4dd241', // Replace with your ScanApp API Key
-            videoElement: document.getElementById('scanner-video'),
-            formats: ['code128', 'code39', 'upc_a', 'ean_13', 'qr_code'],
-            engine: 'dynamic',
-            beepSound: 'https://cdn.scanapp.org/v3/beep.mp3'
-        };
-
-        function showAlert(message, type = 'success') {
-            const alert = document.getElementById('alert');
-            alert.className = `alert alert-${type}`;
-            alert.textContent = message;
-            alert.classList.remove('d-none');
-            setTimeout(() => alert.classList.add('d-none'), 3000);
-        }
-
-        async function startScanner(type) {
-            if (scanner?.isScanning) return;
-            currentScannerType = type;
-            try {
-                document.getElementById('scanner-container').classList.remove('d-none');
-                if (!scanner) {
-                    scanner = new ScanApp.Scanner(scanAppConfig);
-                    scanner.on('scan', (result) => {
-                        document.getElementById(currentScannerType).value = result.code;
+        function startScanner() {
+            scanner = new Html5Qrcode("reader");
+            scanner.start(
+                { facingMode: "environment" }, // Use rear camera
+                { fps: 10, qrbox: 250 },
+                (decodedText) => {
+                    if (scanningItem) {
+                        document.getElementById("itemBarcode").value = decodedText;
+                        scanningItem = false;
+                    } else {
+                        document.getElementById("serialBarcode").value = decodedText;
                         stopScanner();
-                    });
-                    scanner.on('error', (error) => {
-                        showAlert(`Scanner error: ${error.message}`, 'danger');
-                        stopScanner();
-                    });
-                }
-                await scanner.start();
-            } catch (err) {
-                showAlert(`Scanner initialization failed: ${err.message}`, 'danger');
-                stopScanner();
-            }
+                    }
+                },
+                (errorMessage) => { console.warn(errorMessage); }
+            );
         }
 
-        async function stopScanner() {
-            if (scanner?.isScanning) {
-                await scanner.stop();
-            }
-            document.getElementById('scanner-container').classList.add('d-none');
-        }
-
-        function toggleManualEntry() {
-            manualEntryEnabled = !manualEntryEnabled;
-            const inputs = document.querySelectorAll('input');
-            const toggleBtn = document.getElementById('manualToggle');
-            inputs.forEach(input => input.disabled = !manualEntryEnabled);
-            toggleBtn.textContent = manualEntryEnabled ? 'Disable Manual Entry' : 'Enable Manual Entry';
-            toggleBtn.classList.toggle('btn-secondary');
-            toggleBtn.classList.toggle('btn-warning');
+        function stopScanner() {
+            if (scanner) scanner.stop();
         }
 
         async function saveToGoogleSheets() {
-            const item = document.getElementById('item').value;
-            const serial = document.getElementById('serial').value;
+            const itemBarcode = document.getElementById("itemBarcode").value;
+            const serialBarcode = document.getElementById("serialBarcode").value;
 
-            if (!item || !serial) {
-                showAlert('Please fill both fields!', 'warning');
+            if (!itemBarcode || !serialBarcode) {
+                alert("Please scan or enter both barcodes!");
                 return;
             }
 
-            const scriptURL = 'https://script.google.com/macros/s/AKfycbyhMRU0DcDquqbamt5vSRBheJDIzEFcGnwgVZJ7H7fH4DbjJgFllr59xXjAWVElzpqKPg/exec';
+            const scriptURL = "YOUR_GOOGLE_SCRIPT_URL_HERE";
+            const data = { item: itemBarcode, serial: serialBarcode };
 
             try {
                 await fetch(scriptURL, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({
-                        item: item,
-                        serial: serial,
-                        timestamp: new Date().toISOString()
-                    })
+                    method: "POST",
+                    body: JSON.stringify(data),
+                    headers: { "Content-Type": "application/json" }
                 });
-
-                showAlert('Data saved successfully!');
-                document.getElementById('item').value = '';
-                document.getElementById('serial').value = '';
+                alert("Data saved successfully!");
             } catch (error) {
-                showAlert('Error saving data. Please try again.', 'danger');
+                alert("Error saving data!");
             }
         }
-
     </script>
+
 </body>
 </html>
