--- a/index.html
+++ b/index.html
@@ -25,33 +25,23 @@
 
     <!-- Control Buttons -->
     <button onclick="startScanner()">Start Scanning</button>
-    <button onclick="stopScanner()">Stop Scanner</button>
     <button onclick="saveToGoogleSheets()">Save Record</button>
 
     <script>
-        let scanner;
         let scanningItem = true; // Track which barcode is being scanned
 
         function startScanner() {
-            scanner = new Html5Qrcode("reader");
-            scanner.start(
-                { facingMode: "environment" }, // Use rear camera
-                { fps: 10, qrbox: 250 },
-                (decodedText) => {
-                    if (scanningItem) {
-                        document.getElementById("itemBarcode").value = decodedText;
-                        scanningItem = false;
-                    } else {
-                        document.getElementById("serialBarcode").value = decodedText;
-                        stopScanner();
-                    }
-                },
-                (errorMessage) => { console.warn(errorMessage); }
-            );
-        }
+            const scanner = new Html5QrcodeScanner("reader", { fps: 10, qrbox: 250 });
 
-        function stopScanner() {
-            if (scanner) scanner.stop();
+            scanner.render((decodedText) => {
+                if (scanningItem) {
+                    document.getElementById("itemBarcode").value = decodedText;
+                    scanningItem = false;
+                } else {
+                    document.getElementById("serialBarcode").value = decodedText;
+                    scanner.clear();
+                }
+            });
         }
 
         async function saveToGoogleSheets() {
