--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mobile Barcode Scanner</title>
+  <title>Mobile Barcode Scanner with Zoom (Smaller Scanner Screen)</title>
   <!-- Include QuaggaJS from CDN -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/quagga/0.12.1/quagga.min.js"></script>
   <style>
@@ -11,10 +11,11 @@
       font-family: Arial, sans-serif;
       margin: 10px;
     }
+    /* Modified scanner container to be approximately 50% smaller */
     #interactive {
       position: relative;
-      width: 100%;
-      max-width: 400px;
+      width: 50%;         /* Reduced width to 50% */
+      max-width: 200px;   /* Adjust maximum width as needed */
       margin: auto;
       border: 1px solid #ccc;
     }
@@ -32,7 +33,8 @@
       display: block;
       margin-top: 10px;
     }
-    input[type="text"] {
+    input[type="text"],
+    input[type="range"] {
       width: 90%;
       padding: 8px;
       font-size: 1em;
@@ -45,7 +47,7 @@
   </style>
 </head>
 <body>
-  <h1>Mobile Barcode Scanner</h1>
+  <h1>Mobile Barcode Scanner with Zoom (Smaller Scanner Screen)</h1>
 
   <!-- Scanner View -->
   <div id="interactive" class="viewport"></div>
@@ -62,7 +64,8 @@
     <input type="range" id="focus" min="0" max="100" step="1" value="50" />
     <br />
     <label for="zoom">Zoom (if supported):</label>
-    <input type="range" id="zoom" min="1" max="3" step="0.1" value="1" />
+    <!-- Default zoom value is 1; adjust min and max values based on your camera capabilities -->
+    <input type="range" id="zoom" min="1" max="5" step="0.1" value="1" />
   </div>
 
   <!-- Manual Input Form -->
@@ -100,7 +103,6 @@
           target: document.querySelector("#interactive"),
           constraints: {
             facingMode: "environment"
-            // You can add advanced constraints here if supported.
           }
         },
         decoder: {
@@ -132,6 +134,15 @@
         const track = Quagga.CameraAccess.getActiveTrack();
         if (track) {
           activeStreamTrack = track;
+          // Optionally, set the initial zoom to 1 if supported.
+          const capabilities = activeStreamTrack.getCapabilities();
+          if (capabilities.zoom) {
+            // Update the zoom slider attributes based on the camera's capabilities.
+            document.getElementById("zoom").min = capabilities.zoom.min;
+            document.getElementById("zoom").max = capabilities.zoom.max;
+            document.getElementById("zoom").step = capabilities.zoom.step || 0.1;
+            document.getElementById("zoom").value = capabilities.zoom.min;
+          }
         }
       });
 
@@ -156,97 +167,4 @@
         // Once both barcodes are scanned, send the record.
         recordData(lastScannedItem, lastScannedSerial);
         // Reset for next scan session.
-        lastScannedItem = "";
-        lastScannedSerial = "";
-      }
-    }
-
-    // Stop the scanner
-    function stopScanner() {
-      if (!scanning) return;
-      scanning = false;
-      document.getElementById("start-scan").disabled = false;
-      document.getElementById("stop-scan").disabled = true;
-      Quagga.stop();
-    }
-
-    // Adjust brightness by modifying the CSS filter on the video element.
-    document.getElementById("brightness").addEventListener("input", function () {
-      const brightnessValue = this.value;
-      const videoElem = document.querySelector("#interactive video");
-      if (videoElem) {
-        videoElem.style.filter = `brightness(${brightnessValue})`;
-      }
-    });
-
-    // Attempt to adjust focus using media track constraints (may not be supported on many devices).
-    document.getElementById("focus").addEventListener("input", function () {
-      const focusValue = parseInt(this.value);
-      if (activeStreamTrack) {
-        const capabilities = activeStreamTrack.getCapabilities();
-        if (capabilities.focusDistance) {
-          const settings = { focusDistance: focusValue };
-          activeStreamTrack.applyConstraints({ advanced: [settings] })
-            .then(() => console.log("Focus adjusted:", focusValue))
-            .catch(err => console.error("Focus adjustment error:", err));
-        } else {
-          console.warn("Focus adjustment not supported by this camera.");
-        }
-      }
-    });
-
-    // Attempt to adjust zoom using media track constraints (may not be supported on many devices).
-    document.getElementById("zoom").addEventListener("input", function () {
-      const zoomValue = parseFloat(this.value);
-      if (activeStreamTrack) {
-        const capabilities = activeStreamTrack.getCapabilities();
-        if (capabilities.zoom) {
-          activeStreamTrack.applyConstraints({ advanced: [{ zoom: zoomValue }] })
-            .then(() => console.log("Zoom adjusted:", zoomValue))
-            .catch(err => console.error("Zoom adjustment error:", err));
-        } else {
-          console.warn("Zoom adjustment not supported by this camera.");
-        }
-      }
-    });
-
-    // Handle manual form submission.
-    document.getElementById("manual-form").addEventListener("submit", function (e) {
-      e.preventDefault();
-      const item = document.getElementById("itemBarcode").value;
-      const serial = document.getElementById("serialBarcode").value;
-      recordData(item, serial);
-    });
-
-    // Send data to Google Sheets using a Google Apps Script Web App endpoint.
-    function recordData(item, serial) {
-      // Replace with your actual Google Apps Script Web App URL.
-      const scriptURL = 'https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec';
-      const data = {
-        itemBarcode: item,
-        serialBarcode: serial,
-        timestamp: new Date().toISOString()
-      };
-
-      fetch(scriptURL, {
-        method: 'POST',
-        body: JSON.stringify(data),
-        headers: { 'Content-Type': 'application/json' }
-      })
-        .then(response => response.json())
-        .then(responseJson => {
-          alert("Data recorded successfully!");
-          console.log("Response from server:", responseJson);
-        })
-        .catch(error => {
-          console.error("Error recording data:", error.message);
-          alert("Error recording data.");
-        });
-    }
-
-    // Button event listeners
-    document.getElementById("start-scan").addEventListener("click", startScanner);
-    document.getElementById("stop-scan").addEventListener("click", stopScanner);
-  </script>
-</body>
-</html>
+        
