--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mobile Barcode Scanner with Zoom</title>
+  <title>Mobile Barcode Scanner with Zoom (Enhanced Accuracy)</title>
   <!-- Include QuaggaJS from CDN -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/quagga/0.12.1/quagga.min.js"></script>
   <style>
@@ -11,11 +11,11 @@
       font-family: Arial, sans-serif;
       margin: 10px;
     }
-    /* Modified scanner container to be 50% smaller than before */
+    /* Scanner view container at 50% of original size */
     #interactive {
       position: relative;
-      width: 50%;         /* Changed from 100% to 50% */
-      max-width: 200px;   /* Reduced max-width from 400px to 200px */
+      width: 50%;
+      max-width: 200px;
       margin: auto;
       border: 1px solid #ccc;
     }
@@ -47,9 +47,9 @@
   </style>
 </head>
 <body>
-  <h1>Mobile Barcode Scanner with Zoom</h1>
+  <h1>Mobile Barcode Scanner with Zoom (Enhanced Accuracy)</h1>
 
-  <!-- Scanner View -->
+  <!-- Scanner View (50% smaller) -->
   <div id="interactive" class="viewport"></div>
   
   <!-- Scanner Controls -->
@@ -89,7 +89,7 @@
     let lastScannedSerial = "";
     let activeStreamTrack = null;
 
-    // Start the scanner using QuaggaJS
+    // Start the scanner using QuaggaJS with enhanced configuration
     function startScanner() {
       if (scanning) return;
       scanning = true;
@@ -102,11 +102,14 @@
           type: "LiveStream",
           target: document.querySelector("#interactive"),
           constraints: {
-            facingMode: "environment"
-          }
+            facingMode: "environment",
+            width: { ideal: 1280 },
+            height: { ideal: 720 }
+          },
+          // Limit the detection region to improve accuracy.
+          area: { top: "25%", right: "10%", left: "10%", bottom: "25%" }
         },
         decoder: {
-          // Enable various barcode readers
           readers: [
             "code_128_reader",
             "ean_reader",
@@ -121,7 +124,9 @@
             "code_93_reader"
           ]
         },
-        locate: true
+        locate: true,
+        numOfWorkers: navigator.hardwareConcurrency || 4,
+        frequency: 10
       }, function (err) {
         if (err) {
           console.error(err);
